# cgre

./: AUTHORS  CONTRIBUTING  INSTALL  LICENSE  Makefile.am  NEWS  README  configure.ac
doc/: Doxyfile.in  Makefile.am
doc/src/man/: cgre-clockperf.man.in
include/cgre/: cgre.h
include/cgre/core/: common.h  list.h  set.h  tree.h
include/cgre/math/: common.h  quaternion.h  vector2.h  vector3.h  vector4.h
include/cgre/render/: shader.h
oldtests/: Makefile.am
oldtests/core/: Makefile.am  cgre_hash_tests.c  cgre_list_tests.c  cgre_node_tests.c  cgre_tree_tests.c
oldtests/math/: Makefile.am  cgre_clamp_tests.c  cgre_vector2_tests.c
oldtests/speed/core/: cgre_tree_insert.c
oldtests/speed/math/: Makefile.am  cgre_base.c  cgre_vec2_oriented_angle_between.c
src/: Makefile.am  cgre.c
src/core/: common.c  list.c  node.c  tree.c
src/core/node/: array.c  hash.c  queue.c  stack.c  tree.c
src/math/: common.c  vector2.c
tests/: Makefile.am
tests/core/: Makefile.am  cgre_node_tests.c  cgre_tree_tests.c
tests/core/cgre_node/: Makefile.am  cgre_node_tests.c
tests/core/cgre_node/cgre_array/: cgre_array_add_tests.c  cgre_array_delete_tests.c  cgre_array_get_tests.c  cgre_array_list_tests.c  cgre_array_set_tests.c
tests/core/cgre_node/cgre_hash_list/: Makefile.am  cgre_hash_list_delete_tests.c  cgre_hash_list_insert_tests.c  cgre_hash_list_replace_tests.c  cgre_hash_list_search_tests.c
tests/core/cgre_node/cgre_queue/: cgre_queue_peek_tests.c  cgre_queue_pop_tests.c  cgre_queue_push_tests.c
tests/core/cgre_node/cgre_stack/: cgre_stack_peek_tests.c  cgre_stack_pop_tests.c  cgre_stack_push_tests.c
tests/core/cgre_node/cgre_tree/: cgre_tree_delete_tests.c  cgre_tree_insert_tests.c  cgre_tree_replace_tests.c  cgre_tree_search_tests.c
tests/math/: Makefile.am
tests/math/cgre_vector2/: Makefile.am  cgre_vec2_add_tests.c  cgre_vec2_angle_between_tests.c  cgre_vec2_cross_product_tests.c  cgre_vec2_distance_tests.c  cgre_vec2_dot_product_tests.c  cgre_vec2_length_tests.c  cgre_vec2_normalize_tests.c  cgre_vec2_oriented_angle_between_tests.c  cgre_vec2_subtract_tests.c
tests/speed/: Makefile.am  cgre-clockperf.c  cgre-clockperf.h  clockperf.h
tests/speed/math/: cgre_real_clamp.c  cgre_vec2_angle_between.c
