AM_CPPFLAGS = -I$(top_srcdir)/include

lib_LTLIBRARIES = libcgre.la

libcgre_la_SOURCES = cgre.c \
		     core/common.c \
		     core/node/array.c \
		     core/node/hash.c \
		     core/node/queue.c \
		     core/node/stack.c \
		     core/node/tree.c \
		     math/common.c \
		     math/vector2.c
