AM_CPPFLAGS = -I$(top_srcdir)/include

LDADD = $(top_builddir)/src/libcgre.la

TESTS = cgre_vec2_add_tests \
	cgre_vec2_angle_between_tests \
	cgre_vec2_cross_product_tests \
	cgre_vec2_distance_tests \
	cgre_vec2_dot_product_tests \
	cgre_vec2_length_tests \
	cgre_vec2_normalize_tests \
	cgre_vec2_oriented_angle_between_tests \
	cgre_vec2_subtract_tests

check_PROGRAMS = cgre_vec2_add_tests \
		 cgre_vec2_angle_between_tests \
		 cgre_vec2_cross_product_tests \
		 cgre_vec2_distance_tests \
		 cgre_vec2_dot_product_tests \
		 cgre_vec2_length_tests \
		 cgre_vec2_normalize_tests \
		 cgre_vec2_oriented_angle_between_tests \
		 cgre_vec2_subtract_tests

cgre_vec2_add_tests_SOURCES = cgre_vec2_add_tests.c

cgre_vec2_angle_between_tests_SOURCES = cgre_vec2_angle_between_tests.c

cgre_vec2_cross_product_tests_SOURCES = cgre_vec2_cross_product_tests.c

cgre_vec2_distance_tests_SOURCES = cgre_vec2_distance_tests.c

cgre_vec2_dot_product_tests_SOURCES = cgre_vec2_dot_product_tests.c

cgre_vec2_length_tests_SOURCES = cgre_vec2_length_tests.c

cgre_vec2_normalize_tests_SOURCES = cgre_vec2_normalize_tests.c

cgre_vec2_oriented_angle_between_tests_SOURCES = cgre_vec2_oriented_angle_between_tests.c

cgre_vec2_subtract_tests_SOURCES = cgre_vec2_subtract_tests.c
